plugins {
    // For runnable JARs
    id 'application'
    id 'distribution'
}

// Java project
apply plugin: 'java'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21

    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }

}

tasks.withType(JavaCompile) {
    options.release = 21
}


// ANTLR support
apply plugin: 'antlr'

// Repositories providers
repositories {
    mavenCentral()
}

tasks.withType(Tar) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip) {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

installDist {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

dependencies {

    implementation "junit:junit:4.11"
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
    antlr "org.antlr:antlr4:4.5.3"
    // https://mvnrepository.com/artifact/org.fusesource.jansi/jansi
    implementation 'org.fusesource.jansi:jansi:2.4.0'

    implementation fileTree(dir: 'libs', include: ['*.jar'])

}


// Project sources
sourceSets {
    main {
        java {
            srcDir 'src/main'
        }
    }

    test {
        java {
            srcDir 'test'
        }

        resources {
            srcDir 'test'
        }
    }
}

application {
    mainClass = 'pt.up.fe.comp2025.Launcher'
}

